fixing visual bug where dropdown behind some elements

--- a/src/app/home-user/nav/nav.component.css
+++ b/src/app/home-user/nav/nav.component.css
@@ -11,6 +11,7 @@ p-avatar {
     margin: -7px;
     position: sticky;
     top: 0;
+    z-index: 10;
   }
   nav .navbar-left a {
     color: #fff;
